--- a/tugas/pelatihan_vcs_2023/Fernando/landing-page/index.html
+++ b/tugas/pelatihan_vcs_2023/Fernando/landing-page/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="/landing-page/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
@@ -80,34 +80,47 @@
               </li>
             </ul>
           </div>
-
+          <div class="flex justify-center text-white">
+          <a
+            href="https://instagram.com/mobilizesxd"
+            role="button"
+            class="action:text-primary-700 dark:action:text-primary-600 text-primary transition duration-200 ease-in-out hover:text-primary-600 focus:text-primary-600 dark:text-primary-400 dark:hover:text-primary-500 dark:focus:text-primary-500">
+            <!-- Instagram -->
+            <span class="[&>svg]:mx-4 [&>svg]:h-4 [&>svg]:w-4">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="currentColor"
+                viewBox="0 0 24 24">
+                <path
+                  d="M12 0C8.74 0 8.333.015 7.053.072 5.775.132 4.905.333 4.14.63c-.789.306-1.459.717-2.126 1.384S.935 3.35.63 4.14C.333 4.905.131 5.775.072 7.053.012 8.333 0 8.74 0 12s.015 3.667.072 4.947c.06 1.277.261 2.148.558 2.913.306.788.717 1.459 1.384 2.126.667.666 1.336 1.079 2.126 1.384.766.296 1.636.499 2.913.558C8.333 23.988 8.74 24 12 24s3.667-.015 4.947-.072c1.277-.06 2.148-.262 2.913-.558.788-.306 1.459-.718 2.126-1.384.666-.667 1.079-1.335 1.384-2.126.296-.765.499-1.636.558-2.913.06-1.28.072-1.687.072-4.947s-.015-3.667-.072-4.947c-.06-1.277-.262-2.149-.558-2.913-.306-.789-.718-1.459-1.384-2.126C21.319 1.347 20.651.935 19.86.63c-.765-.297-1.636-.499-2.913-.558C15.667.012 15.26 0 12 0zm0 2.16c3.203 0 3.585.016 4.85.071 1.17.055 1.805.249 2.227.415.562.217.96.477 1.382.896.419.42.679.819.896 1.381.164.422.36 1.057.413 2.227.057 1.266.07 1.646.07 4.85s-.015 3.585-.074 4.85c-.061 1.17-.256 1.805-.421 2.227-.224.562-.479.96-.899 1.382-.419.419-.824.679-1.38.896-.42.164-1.065.36-2.235.413-1.274.057-1.649.07-4.859.07-3.211 0-3.586-.015-4.859-.074-1.171-.061-1.816-.256-2.236-.421-.569-.224-.96-.479-1.379-.899-.421-.419-.69-.824-.9-1.38-.165-.42-.359-1.065-.42-2.235-.045-1.26-.061-1.649-.061-4.844 0-3.196.016-3.586.061-4.861.061-1.17.255-1.814.42-2.234.21-.57.479-.96.9-1.381.419-.419.81-.689 1.379-.898.42-.166 1.051-.361 2.221-.421 1.275-.045 1.65-.06 4.859-.06l.045.03zm0 3.678c-3.405 0-6.162 2.76-6.162 6.162 0 3.405 2.76 6.162 6.162 6.162 3.405 0 6.162-2.76 6.162-6.162 0-3.405-2.76-6.162-6.162-6.162zM12 16c-2.21 0-4-1.79-4-4s1.79-4 4-4 4 1.79 4 4-1.79 4-4 4zm7.846-10.405c0 .795-.646 1.44-1.44 1.44-.795 0-1.44-.646-1.44-1.44 0-.794.646-1.439 1.44-1.439.793-.001 1.44.645 1.44 1.439z" />
+              </svg>
+            </span>
+          </a>
+        </div>
           <div class="my-1 flex items-center lg:my-0 lg:ml-auto">
             <button
               type="button"
-              class="mr-2 inline-block rounded px-6 pt-2.5 pb-2 text-xs font-medium uppercase leading-normal text-primary transition duration-150 ease-in-out hover:bg-neutral-500 hover:bg-opacity-10 hover:text-primary-600 focus:text-primary-600 focus:outline-none focus:ring-0 active:text-primary-700 dark:text-primary-400 dark:hover:bg-neutral-700 dark:hover:bg-opacity-60 dark:hover:text-primary-500 dark:focus:text-primary-500 dark:active:text-primary-600">
+              class="inline-block rounded bg-primary px-6 pt-2.5 pb-2 text-xs font-medium uppercase leading-normal text-white shadow-[0_4px_9px_-4px_#E84D0B] transition duration-150 ease-in-out hover:bg-primary-600 hover:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.3),0_4px_18px_0_rgba(232,77,11,0.2)] focus:bg-primary-600 focus:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.3),0_4px_18px_0_rgba(232,77,11,0.2)] focus:outline-none focus:ring-0 active:bg-primary-700 active:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.3),0_4px_18px_0_rgba(232,77,11,0.2)] dark:shadow-[0_4px_9px_-4px_rgba(232,77,11,0.5)] dark:hover:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.2),0_4px_18px_0_rgba(232,77,11,0.1)] dark:focus:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.2),0_4px_18px_0_rgba(232,77,11,0.1)] dark:active:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.2),0_4px_18px_0_rgba(232,77,11,0.1)]">
               Login
             </button>
             <button
               type="button"
-              class="inline-block rounded bg-primary px-6 pt-2.5 pb-2 text-xs font-medium uppercase leading-normal text-white shadow-[0_4px_9px_-4px_#3b71ca] transition duration-150 ease-in-out hover:bg-primary-600 hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:bg-primary-600 focus:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:outline-none focus:ring-0 active:bg-primary-700 active:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] dark:shadow-[0_4px_9px_-4px_rgba(59,113,202,0.5)] dark:hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)] dark:focus:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)] dark:active:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)]">
+              class="inline-block rounded bg-primary px-6 pt-2.5 pb-2 text-xs font-medium uppercase leading-normal text-white shadow-[0_4px_9px_-4px_#E84D0B] transition duration-150 ease-in-out hover:bg-primary-600 hover:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.3),0_4px_18px_0_rgba(232,77,11,0.2)] focus:bg-primary-600 focus:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.3),0_4px_18px_0_rgba(232,77,11,0.2)] focus:outline-none focus:ring-0 active:bg-primary-700 active:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.3),0_4px_18px_0_rgba(232,77,11,0.2)] dark:shadow-[0_4px_9px_-4px_rgba(232,77,11,0.5)] dark:hover:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.2),0_4px_18px_0_rgba(232,77,11,0.1)] dark:focus:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.2),0_4px_18px_0_rgba(232,77,11,0.1)] dark:active:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.2),0_4px_18px_0_rgba(232,77,11,0.1)]"">
               Sign up for free
             </button>
           </div>
         </div>
       </nav>
-
       <div class="px-6 py-12 text-center md:px-12 lg:py-24 lg:text-left">
         <div
           class="w-100 mx-auto text-neutral-800 sm:max-w-2xl md:max-w-3xl lg:max-w-5xl xl:max-w-7xl">
           <div class="grid items-center gap-12 lg:grid-cols-2">
             <div class="mt-12 lg:mt-0" style="z-index: 10">
               <h1
-                class="mt-0 mb-12 text-5xl font-bold tracking-tight md:text-6xl xl:text-7xl text-[hsl(218,81%,75%)]">
-                Laboratorium <br /><span class="text-[hsl(218,81%,75%)]"
-                  >Rekayasa Perangkat Lunak</span
-                >
+                class="mt-0 mb-12 text-5xl font-bold tracking-tight md:text-6xl xl:text-7xl text-[hsl(18,81%,75%)]">
+                Laboratorium Rekayasa Perangkat Lunak<br />
               </h1>
-              <p class="opacity-70 text-[hsl(218,81%,60%)]">
+              <p class="opacity-70 text-[hsl(18,81%,60%)]">
                 Laboratorium Rekayasa Perangkat Lunak di ITS adalah fasilitas
                 pendidikan dan penelitian yang fokus pada pengembangan perangkat
                 lunak. Di sini, mahasiswa dan peneliti mempelajari desain,
@@ -128,7 +141,7 @@
                     <div class="relative mb-6">
                       <input
                         type="text"
-                        class="peer block min-h-[auto] w-full rounded border-0 bg-transparent py-[0.32rem] px-3 leading-[1.6] outline-none transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
+                        class="peer block min-h-[auto] w-full rounded border-0 bg-transparent py-[0.32rem] px-3 leading-[1.6] outline-none transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0 bg-primary px-6 pt-2.5 pb-2 text-xs font-medium uppercase leading-normal text-white shadow-[0_4px_9px_-4px_#E84D0B] transition duration-150 ease-in-out hover:bg-primary-600 hover:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.3),0_4px_18px_0_rgba(232,77,11,0.2)] focus:bg-primary-600 focus:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.3),0_4px_18px_0_rgba(232,77,11,0.2)] focus:outline-none focus:ring-0 active:bg-primary-700 active:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.3),0_4px_18px_0_rgba(232,77,11,0.2)] dark:shadow-[0_4px_9px_-4px_rgba(232,77,11,0.5)] dark:hover:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.2),0_4px_18px_0_rgba(232,77,11,0.1)] dark:focus:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.2),0_4px_18px_0_rgba(232,77,11,0.1)] dark:active:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.2),0_4px_18px_0_rgba(232,77,11,0.1)]" 
                         id="exampleFormControlInput1"
                         placeholder="First name" />
                       <label
@@ -140,7 +153,7 @@
                     <div class="relative mb-6">
                       <input
                         type="text"
-                        class="peer block min-h-[auto] w-full rounded border-0 bg-transparent py-[0.32rem] px-3 leading-[1.6] outline-none transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
+                        class="peer block min-h-[auto] w-full rounded border-0 bg-transparent py-[0.32rem] px-3 leading-[1.6] outline-none transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0 bg-primary px-6 pt-2.5 pb-2 text-xs font-medium uppercase leading-normal text-white shadow-[0_4px_9px_-4px_#E84D0B] transition duration-150 ease-in-out hover:bg-primary-600 hover:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.3),0_4px_18px_0_rgba(232,77,11,0.2)] focus:bg-primary-600 focus:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.3),0_4px_18px_0_rgba(232,77,11,0.2)] focus:outline-none focus:ring-0 active:bg-primary-700 active:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.3),0_4px_18px_0_rgba(232,77,11,0.2)] dark:shadow-[0_4px_9px_-4px_rgba(232,77,11,0.5)] dark:hover:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.2),0_4px_18px_0_rgba(232,77,11,0.1)] dark:focus:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.2),0_4px_18px_0_rgba(232,77,11,0.1)] dark:active:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.2),0_4px_18px_0_rgba(232,77,11,0.1)]"
                         id="exampleFormControlInput2"
                         placeholder="Last name" />
                       <label
@@ -153,7 +166,7 @@
                   <div class="relative mb-6">
                     <input
                       type="email"
-                      class="peer block min-h-[auto] w-full rounded border-0 bg-transparent py-[0.32rem] px-3 leading-[1.6] outline-none transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
+                      class="peer block min-h-[auto] w-full rounded border-0 bg-transparent py-[0.32rem] px-3 leading-[1.6] outline-none transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0 bg-primary px-6 pt-2.5 pb-2 text-xs font-medium uppercase leading-normal text-white shadow-[0_4px_9px_-4px_#E84D0B] transition duration-150 ease-in-out hover:bg-primary-600 hover:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.3),0_4px_18px_0_rgba(232,77,11,0.2)] focus:bg-primary-600 focus:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.3),0_4px_18px_0_rgba(232,77,11,0.2)] focus:outline-none focus:ring-0 active:bg-primary-700 active:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.3),0_4px_18px_0_rgba(232,77,11,0.2)] dark:shadow-[0_4px_9px_-4px_rgba(232,77,11,0.5)] dark:hover:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.2),0_4px_18px_0_rgba(232,77,11,0.1)] dark:focus:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.2),0_4px_18px_0_rgba(232,77,11,0.1)] dark:active:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.2),0_4px_18px_0_rgba(232,77,11,0.1)]"
                       id="exampleFormControlInput3"
                       placeholder="Email address" />
                     <label
@@ -165,7 +178,7 @@
                   <div class="relative mb-6">
                     <input
                       type="password"
-                      class="peer block min-h-[auto] w-full rounded border-0 bg-transparent py-[0.32rem] px-3 leading-[1.6] outline-none transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
+                      class="peer block min-h-[auto] w-full rounded border-0 bg-transparent py-[0.32rem] px-3 leading-[1.6] outline-none transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0 bg-primary px-6 pt-2.5 pb-2 text-xs font-medium uppercase leading-normal text-white shadow-[0_4px_9px_-4px_#E84D0B] transition duration-150 ease-in-out hover:bg-primary-600 hover:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.3),0_4px_18px_0_rgba(232,77,11,0.2)] focus:bg-primary-600 focus:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.3),0_4px_18px_0_rgba(232,77,11,0.2)] focus:outline-none focus:ring-0 active:bg-primary-700 active:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.3),0_4px_18px_0_rgba(232,77,11,0.2)] dark:shadow-[0_4px_9px_-4px_rgba(232,77,11,0.5)] dark:hover:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.2),0_4px_18px_0_rgba(232,77,11,0.1)] dark:focus:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.2),0_4px_18px_0_rgba(232,77,11,0.1)] dark:active:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.2),0_4px_18px_0_rgba(232,77,11,0.1)]"
                       id="exampleFormControlInput4"
                       placeholder="Password" />
                     <label
@@ -190,7 +203,7 @@
                   </div>
                   <button
                     type="button"
-                    class="mb-6 inline-block w-full rounded bg-primary px-6 pt-2.5 pb-2 text-xs font-medium uppercase leading-normal text-white shadow-[0_4px_9px_-4px_#3b71ca] transition duration-150 ease-in-out hover:bg-primary-600 hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:bg-primary-600 focus:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:outline-none focus:ring-0 active:bg-primary-700 active:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] dark:shadow-[0_4px_9px_-4px_rgba(59,113,202,0.5)] dark:hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)] dark:focus:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)] dark:active:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)]">
+                    class="mb-6 inline-block w-full rounded bg-primary px-6 pt-2.5 pb-2 text-xs font-medium uppercase leading-normal text-white shadow-[0_4px_9px_-4px_#E84D0B] transition duration-150 ease-in-out hover:bg-primary-600 hover:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.3),0_4px_18px_0_rgba(232,77,11,0.2)] focus:bg-primary-600 focus:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.3),0_4px_18px_0_rgba(232,77,11,0.2)] focus:outline-none focus:ring-0 active:bg-primary-700 active:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.3),0_4px_18px_0_rgba(232,77,11,0.2)] dark:shadow-[0_4px_9px_-4px_rgba(232,77,11,0.5)] dark:hover:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.2),0_4px_18px_0_rgba(232,77,11,0.1)] dark:focus:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.2),0_4px_18px_0_rgba(232,77,11,0.1)] dark:active:shadow-[0_8px_9px_-4px_rgba(232,77,11,0.2),0_4px_18px_0_rgba(232,77,11,0.1)]">
                     Sign up
                   </button>
                   <div class="text-center">
@@ -254,7 +267,7 @@
                           viewBox="0 0 24 24">
                           <path
                             d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
-                        </svg>
+                        </svg>  <!--/>-->
                       </span>
                     </a>
                   </div>
